--- a/src/styles/matrix.css
+++ b/src/styles/matrix.css
@@ -2,3 +2,23 @@
   font-family: monospace;
   white-space: pre;
 }
+        
+.main-container {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+}
+.canvas-section {
+  width: 50%;
+            position: relative;
+            background-color: #f0f0f0;
+            border-right: 2px solid #333;
+        }
+        .matrix-section {
+            width: 300px;}
+
+            .canvas-container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
